--- a/source/index.html
+++ b/source/index.html
@@ -4,10 +4,16 @@
         <meta charset="utf-8" />
         <title>Lpro AIT</title>
         <link rel="stylesheet" href="styles/style.css" />
+        <script src="scripts/scripts.js"></script>
     </head>
-    <body>
-        <div class="welcome">
-            <p>Hello word</p>
+    <body onload="init()">
+        <div id="test">
+
+        </div>
+        <div>
+            <button onclick="test_button()" id="button">
+                Click me !
+            </button>
         </div>
     </body>
 </html>
