--- a/source/index.html
+++ b/source/index.html
@@ -7,13 +7,7 @@
         <script src="scripts/scripts.js"></script>
     </head>
     <body onload="init()">
-        <div id="test">
-
-        </div>
-        <div>
-            <button onclick="test_button()" id="button">
-                Click me !
-            </button>
+        <div id="carre">
         </div>
     </body>
 </html>
