--- a/source_1/index.html
+++ b/source_1/index.html
@@ -7,7 +7,8 @@
         <script src="scripts/scripts.js"></script>
     </head>
     <body onload="init()">
-        <div id="carre">
+        <div id="square">
+            0
         </div>
     </body>
 </html>
