--- a/source_1/index.html
+++ b/source_1/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Lpro AIT</title>
+        <title>Lpro AIT 1</title>
         <link rel="stylesheet" href="styles/style.css" />
         <script src="scripts/scripts.js"></script>
     </head>
