--- a/source_2/index.html
+++ b/source_2/index.html
@@ -7,8 +7,8 @@
         <script src="scripts/scripts.js"></script>
     </head>
     <body onload="init()">
-        <div id="square">
-            0
-        </div>
+        <div id="val"></div>
+        <div id="square">0</div>
+        
     </body>
 </html>
