--- a/source_2/index.html
+++ b/source_2/index.html
@@ -10,7 +10,8 @@
 
 <body onload="init()">
     <div id="val"></div>
-    <div id="square">0</div>
+    <div id="square"></div>
+    <input id="ref" type="range" min="0" max="1000" value="500" />
 
 </body>
 
